--- a/index.html
+++ b/index.html
@@ -1,1 +1,149 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RC Construction — Coming Soon</title>
+
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background: #f5f5f5;
+            color: #333;
+            overflow-x: hidden;
+        }
+
+        /* Hero Section */
+        .hero {
+            height: 100vh;
+            background: url('https://images.unsplash.com/photo-1581091870627-3a5c7f3b6a9a?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            color: white;
+            position: relative;
+        }
+
+        .hero::after {
+            content: "";
+            position: absolute;
+            inset: 0;
+            background: rgba(0,0,0,0.55);
+        }
+
+        .hero-content {
+            position: relative;
+            z-index: 2;
+            animation: fadeIn 2s ease;
+        }
+
+        .hero h1 {
+            font-size: 4rem;
+            margin: 0;
+            letter-spacing: 3px;
+        }
+
+        .hero p {
+            font-size: 1.4rem;
+            margin-top: 15px;
+        }
+
+        .phone-box {
+            margin-top: 30px;
+            padding: 12px 25px;
+            background: rgba(255, 180, 0, 0.9);
+            color: #222;
+            font-size: 1.3rem;
+            border-radius: 6px;
+            font-weight: bold;
+            display: inline-block;
+            animation: fadeIn 3s ease;
+        }
+
+        /* Countdown Section */
+        .countdown {
+            padding: 60px 10%;
+            background: white;
+            text-align: center;
+        }
+
+        .countdown h2 {
+            font-size: 2.2rem;
+            margin-bottom: 20px;
+        }
+
+        .timer {
+            font-size: 2rem;
+            font-weight: bold;
+            letter-spacing: 2px;
+        }
+
+        /* Footer */
+        footer {
+            background: #222;
+            color: white;
+            text-align: center;
+            padding: 25px 0;
+            margin-top: 40px;
+        }
+
+        /* Animations */
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+    </style>
+</head>
+<body>
+
+    <!-- HERO -->
+    <section class="hero">
+        <div class="hero-content">
+            <h1>RC LLC Construction</h1>
+            <p>Our new website is under construction.</p>
+            <p>We're building something great — stay tuned.</p>
+
+            <div class="phone-box">
+                Call Us: (440) 796-9239
+            </div>
+        </div>
+    </section>
+
+
+    <!-- FOOTER -->
+    <footer>
+        © 2026 RC LLC Construction — All Rights Reserved
+    </footer>
+
+    <script>
+        // Simple countdown timer (example: 60 days from now)
+        const launchDate = new Date();
+        launchDate.setDate(launchDate.getDate() + 60);
+
+        function updateTimer() {
+            const now = new Date();
+            const diff = launchDate - now;
+
+            if (diff <= 0) {
+                document.getElementById("timer").innerHTML = "We're Live!";
+                return;
+            }
+
+            const days = Math.floor(diff / (1000 * 60 * 60 * 24));
+            const hours = Math.floor((diff / (1000 * 60 * 60)) % 24);
+            const minutes = Math.floor((diff / (1000 * 60)) % 60);
+            const seconds = Math.floor((diff / 1000) % 60);
+
+            document.getElementById("timer").innerHTML =
+                `${days}d ${hours}h ${minutes}m ${seconds}s`;
+        }
+
+        setInterval(updateTimer, 1000);
+        updateTimer();
+    </script>
+
+</body>
+</html>
