--- a/index.html
+++ b/index.html
@@ -74,6 +74,84 @@
       color: var(--accent-dark);
     }
 
+/* Logo */
+.brand-logo {
+  height: 48px;
+  width: auto;
+  border-radius: 6px;
+  object-fit: contain;
+}
+
+/* Hamburger button (hidden on desktop) */
+.hamburger {
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  gap: 5px;
+  width: 32px;
+  height: 32px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
+
+.hamburger span {
+  display: block;
+  width: 100%;
+  height: 3px;
+  background: var(--text-main);
+  border-radius: 3px;
+  transition: 0.3s ease;
+}
+
+/* Mobile nav menu (hidden by default) */
+#nav-menu {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+@media (max-width: 820px) {
+  #nav-menu {
+    position: absolute;
+    top: 72px;
+    right: 0;
+    left: 0;
+    background: #ffffff;
+    border-bottom: 1px solid var(--border);
+    flex-direction: column;
+    padding: 20px 0;
+    display: none;
+  }
+
+  #nav-menu.open {
+    display: flex;
+  }
+
+  nav a {
+    margin: 10px 0;
+    font-size: 1.1rem;
+  }
+
+  .hamburger {
+    display: flex;
+  }
+}
+
+/* Hamburger animation when active */
+.hamburger.active span:nth-child(1) {
+  transform: translateY(8px) rotate(45deg);
+}
+
+.hamburger.active span:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger.active span:nth-child(3) {
+  transform: translateY(-8px) rotate(-45deg);
+}
+
     /* HERO */
     .hero {
       padding: 80px 24px;
@@ -207,9 +285,19 @@
 <header>
   <div class="brand">
     <img src="assets/logo.png" alt="Ricket's Construction Logo" class="brand-logo">
+    <div>
+      <strong>Ricket's Construction</strong><br>
+      <small>Local. Reliable. Built to last.</small>
+    </div>
   </div>
 
-  <nav>
+  <button class="hamburger" id="hamburger">
+    <span></span>
+    <span></span>
+    <span></span>
+  </button>
+
+  <nav id="nav-menu">
     <a href="#construction">Construction</a>
     <a href="#equipment">Equipment Rental</a>
     <a href="#landscaping">Landscaping</a>
@@ -353,5 +441,22 @@
   © 2026 Ricket's Construction · All Rights Reserved
 </footer>
 
+<script>
+  const hamburger = document.getElementById("hamburger");
+  const navMenu = document.getElementById("nav-menu");
+
+  hamburger.addEventListener("click", () => {
+    hamburger.classList.toggle("active");
+    navMenu.classList.toggle("open");
+  });
+
+  // Close menu when clicking a link
+  document.querySelectorAll("#nav-menu a").forEach(link => {
+    link.addEventListener("click", () => {
+      hamburger.classList.remove("active");
+      navMenu.classList.remove("open");
+    });
+  });
+</script>
 </body>
 </html>
