--- a/contact.html
+++ b/contact.html
@@ -144,7 +144,9 @@
 
 <header>
   <div class="brand">
+   <a href="/">
     <img src="assets/logo.png" alt="Ricket's Construction Logo" class="brand-logo">
+   </a>
   </div>
 
   <button class="hamburger" id="hamburger">
@@ -160,6 +162,7 @@
     <a href="contact.html">Contact</a>
   </nav>
 </header>
+
 
 <script>
   const hamburger = document.getElementById("hamburger");
@@ -183,4 +186,5 @@
   </div>
 </div>
 </body>
+
 </html>
