Update construction.html header

--- a/construction.html
+++ b/construction.html
@@ -176,7 +176,9 @@
 
 <header>
   <div class="brand">
+   <a href="/">
     <img src="assets/logo.png" alt="Ricket's Construction Logo" class="brand-logo">
+   </a>
   </div>
 
   <button class="hamburger" id="hamburger">
@@ -192,6 +194,7 @@
     <a href="contact.html">Contact</a>
   </nav>
 </header>
+
 
 <script>
   const hamburger = document.getElementById("hamburger");
@@ -249,4 +252,5 @@
 </div>
 
 </body>
+
 </html>
