Update index.html header

--- a/index.html
+++ b/index.html
@@ -284,7 +284,9 @@
 
 <header>
   <div class="brand">
+   <a href="/">
     <img src="assets/logo.png" alt="Ricket's Construction Logo" class="brand-logo">
+   </a>
   </div>
 
   <button class="hamburger" id="hamburger">
@@ -294,14 +296,13 @@
   </button>
 
   <nav id="nav-menu">
-    <a href="#construction">Construction</a>
-    <a href="#equipment">Equipment Rental</a>
-    <a href="#landscaping">Landscaping</a>
-    <a href="#about">About</a>
-    <a href="#testimonials">Testimonials</a>
-    <a href="#contact">Contact</a>
+    <a href="construction.html">Construction</a>
+    <a href="equipment.html">Equipment Rental</a>
+    <a href="landscaping.html">Landscaping</a>
+    <a href="contact.html">Contact</a>
   </nav>
 </header>
+
 
 <section class="hero">
   <h1>We Provide Commercial & Residential Construction, Equipment Rental & Landscaping Services to Northeast Ohio</h1>
